--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #e5fa61;
+background-image: linear-gradient(90deg, #e5fa61 0%, #f7df1c 100%);
+}
+
 h1 {
     color: darkred;
     font-size: 50px;
