--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-image: linear-gradient(90deg, #e5fa61 0%, #f7df1c 100%);
 }
 
 h1 {
-    color: darkred;
+    color: rgb(255, 255, 255);
     font-size: 50px;
     text-align: center;
 }
