--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #e5fa61;
-background-image: linear-gradient(90deg, #e5fa61 0%, #f7df1c 100%);
+background-image: linear-gradient(90deg, #e5fa61 0%, #ffffff 100%);
 }
 
 h1 {
