--- a/style.css
+++ b/style.css
@@ -8,3 +8,10 @@ h1 {
     font-size: 50px;
     text-align: center;
 }
+
+
+div {
+    color: white;
+    font-size: 35px;
+    text-align: justify;
+}
