--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: #e5fa61;
 background-image: linear-gradient(90deg, #e5fa61 0%, #f0ed39 100%);
+}
+
+#banner {
+    width: 100%;
 }
 
 h1 {
