--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
 background-image: linear-gradient(90deg, #e5fa61 0%, #f0ed39 100%);
 }
 
+nav li{
+    display: inline;
+}
+
 #banner {
     width: 100%;
 }
