--- a/style.css
+++ b/style.css
@@ -4,12 +4,20 @@
 
 body {
     background-color: #e5fa61;
-background-image: linear-gradient(90deg, #e5fa61 0%, #f0ed39 100%);
+background-image: linear-gradient(90deg, #01285a 0%, #399ef0 100%);
 }
 
 nav li {
     display: inline;
     padding: 20px;
+}
+
+nav a {
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 30px;
+    color: azure;
+    
 }
 
 #banner {
