--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: #e5fa61;
+    background-color: #3b8edb;
 background-image: linear-gradient(90deg, #01285a 0%, #399ef0 100%);
 }
 
